2008-11-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/timing.cpp, itpp/base/vec.cpp, itpp/fixed/cfix.cpp,
	itpp/fixed/fix.cpp: Add missing #include files required by GCC 4.4

	GCC 4.4 cleaned up some more C++ headers. Required header files
	have to be included explicitly.

	Signed-off-by: Martin Michlmayr <tbm@cyrius.com>

2008-11-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/transforms.cpp: Let IT++ compile and link with MKL 10.1.

	The updated MKL 10.1 package defines DftiCreateDescriptor macro in
	mkl_dfti.h header file, which caused compilation errors in IT++
	transforms.cpp file. This patch fixes this problem.

-------------------------------------------------------------------------------

2008-10-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.6 release (SVN tag: release-4-0-6)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.6.

	* itpp/itpp_acml_tests/Makefile.am, itpp/itpp_mkl_tests/Makefile.am:
	Add specmat_test.vcproj files to the list of distributed files.

2008-10-05  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/local/verification.doc: Added Ubuntu 8.04 to list of tested
	systems

	* doc/local/installation.doc: Minor fix

2008-09-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Do not explicitly inline
	elem_mult_inplace() when using MSVC++.

	This is a workaround for a warning reported by Microsoft Visual
	C++ Express 2008.

	* win32/itpp_acml.sln, win32/itpp_mkl.sln: Use CRLF line endings
	in MSVC++ solution files.

	* win32/itpp_acml_tests/itpp_acml_tests.sln,
	win32/itpp_acml_tests/specmat_test.vcproj,
	win32/itpp_mkl_tests/itpp_mkl_tests.sln,
	win32/itpp_mkl_tests/specmat_test.vcproj: Add MSVC++ project files
	for specmat_test.

2008-09-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am, tests/specmat_test.cpp,
	tests/specmat_test.ref: Add specmat_test program for testing